@@ -1,3 +1,10 @@
+UNRELEASED, S3QL tip
+
+  * Eliminated a race condition that resulted in an apparent loss of
+    remote metadata when the mount.s3ql process was interrupted after
+    renaming the remote metadata but before having completely uploaded
+    the local metadata.
+
 2013-06-14, S3QL 2.1 (beta)
 
   * S3QL now uses SSL connections by default.
